--- a/config_and_secrets/mong-express.yaml
+++ b/config_and_secrets/mong-express.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo-express
+  name: mongo-pavani-express
   labels:
     app: mongo-express
 spec:
