--- a/config_and_secrets/mongo.yaml
+++ b/config_and_secrets/mongo.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongodb-deployment
+  name: mongodb-pavani-deployment
   labels:
     app: mongodb
 spec:
